# fastapi_demo

./: .env  .env.dev  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
app/: main.py
app/core/: __init__.py  config.py  database.py  db.py  deps.py  logging.py  redis.py  server.py
app/exception/: __init__.py  exception_handler.py  service_exception.py
app/models/: __init__.py  base.py  permission.py  response.py  response_result.py  role.py  role_permisson.py  security.py  user.py  user_role.py
app/models/menu/: __init__.py  dto.py  entity.py  vo.py
app/models/role/: __init__.py  dto.py  entity.py  vo.py
app/models/user/: __init__.py  dto.py  entity.py  vo.py
app/repository/: __init__.py  base.py  menu.py  role.py  user.py
app/router/: __init__.py  auth.py  role.py  user.py
app/routers/: deps.py  role_router.py  user_router.py
app/service/: __init__.py  auth.py  menu.py  role.py  user.py  utils.py
app/utils/: jwt.py  pwd.py
