[project]
name = "fastapi-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.116.1",
    "passlib==1.7.4",
    "psycopg2>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.43",
    "redis>=5.2.0",
    "asyncio-redis>=0.15.4",
    "asyncpg>=0.30.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.uv]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
line-length = 120
[tool.ruff.lint]
# 启用的规则集
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "UP", # pyupgrade
]
extend-ignore = [
    "E501", # 忽略行长度过长警告
]
[tool.ruff.format]
quote-style = "single"
